Fixing overflow issue

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -130,6 +130,7 @@ body {
   margin-bottom: 350px;
   position: relative;
   z-index: 1;
+  overflow: hidden;
 }
 
 .bottom-pinned-photo {
